<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Let\'s Go!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="destination">Dest</string>
    <string name="requirement">Budget</string>
    <string name="feeling">Feel</string>
    <!-- DecideDestinationFragment -->
    <string name="where">Where?</string>
    <string name="how_to_enjoy">How to Enjoy?</string>
    <string name="decide_destination">Decide Destination</string>
    <string name="departure_station">Dep.</string>
    <string name="round_trip_budget">Round Trip Budget</string>
    <string name="start_message">Let\'s Go!\non Tokyo Metro Subway</string>
    <!-- DestinationDetailFragment -->
    <string name="there">There!</string>
    <string name="pre_destination_sentence">Your Destination is</string>
    <string name="post_destination_sentence"></string>
    <string name="decide_introduction">Decide Destination\non left side tab, \"WHERE?\"</string>
    <string name="peripheral_information">Peripheral Information</string>
    <!-- SettingActivity -->
    <string name="setting">Settings</string>
    <string name="manual">Manual</string>
    <string name="manual_url">http://yourplace.improve-future.com/introduction/en/index.htm</string>
    <!-- SettingsFragment -->
    <string name="wear">Wear Interaction</string>
    <string name="send_to_wear_on_decision">Auto Notification</string>
    <string name="send_to_wear_on_decision_summary">
        Send a notification about a decided destination to your Android Wear automatically
        when you decide it.
    </string>
    <string name="contact">Contact</string>
    <string name="report_bugs_and_requests">Report Bugs and Request</string>
    <string name="report_bugs_and_requests_summary">Send Mail for reporting Bugs and Requests to the developer.</string>
    <string name="report_bugs_automatically">Report Bugs Automatically</string>
    <string name="report_bugs_automatically_summary">
        Report bugs automatically when you open this App if an error occurred in previous
        session.
        Before reporting, open confirming dialog.
    </string>
</resources>
