<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8px"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="com.improve_future.yourplace.Fragment.DestinationDetailFragment">
    <LinearLayout
        android:id="@+id/layout"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pre_destination_sentence"
            android:layout_gravity="left"/>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/station_mark"
                android:layout_marginTop="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="8sp"
                android:layout_marginLeft="0sp"
                android:layout_width="66sp"
                android:layout_height="66sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/line_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:id="@+id/station_name"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/post_destination_sentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/post_destination_sentence"
            android:layout_gravity="right"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peripheral_information"
            android:layout_gravity="left"/>
        <!--<com.google.android.gms.maps.MapView-->
            <!--android:apiKey="AIzaSyBGGGToG6VOd6M_u64ww6okhWiZV4J68Sc"-->
            <!--android:clickable="true"-->
            <!--android:id="@+id/map"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100sp">-->
        <!--</com.google.android.gms.maps.MapView>-->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/around_spot_list_view"/>
    </LinearLayout>
    <TextView
        android:background="@color/android_blue_level_2"
        android:fadingEdge="vertical"
        android:id="@+id/guidance"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:padding="50sp"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/decide_introduction"/>
</FrameLayout>
